fennec (@MOZ_APP_VERSION@)  unstable; urgency=low

  * Mozilla Nightly (Closes: #nnnn)  <nnnn is the bug number of your ITP>

 -- Mozilla fennec  <blassey@mozilla.com>  @MOZ_DEB_TIMESTAMP@